--- a/pom.xml
+++ b/pom.xml
@@ -1936,6 +1936,13 @@
         <version>${nuxeo.platform.version}</version>
       </dependency>
 
+      <!-- Retention -->
+      <dependency>
+        <groupId>org.nuxeo.retention</groupId>
+        <artifactId>nuxeo-retention-core</artifactId>
+        <version>${nuxeo.platform.version}</version>
+      </dependency>
+
       <!-- Nuxeo Distribution -->
       <dependency>
         <groupId>org.nuxeo.ecm.distribution</groupId>
