--- a/pom.xml
+++ b/pom.xml
@@ -164,8 +164,8 @@
 
     <kafka.version>2.3.0</kafka.version>
     <confluent.version>5.0.0</confluent.version>
-    <chronicle.bom.version>2.17.465</chronicle.bom.version>
-    <chronicle.threads.version>2.17.2</chronicle.threads.version>
+    <chronicle.bom.version>2.17.506</chronicle.bom.version>
+    <chronicle.threads.version>2.17.25</chronicle.threads.version>
     <metrics.version>4.0.3</metrics.version>
     <maven.surefire.version>2.22.1</maven.surefire.version>
   </properties>
@@ -4931,7 +4931,7 @@
       <dependency>
         <!-- unused dependency, declared to exclude affinity -->
         <groupId>net.openhft</groupId>
-        <artifactId>chronicle-threads</artifactId>
+        <artifactId>chronicle-Threads</artifactId>
         <version>${chronicle.threads.version}</version>
         <exclusions>
           <exclusion>
