--- a/pom.xml
+++ b/pom.xml
@@ -6272,59 +6272,6 @@
       </build>
     </profile>
     <profile>
-      <id>nightly</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- http://jira.codehaus.org/browse/MLICENSE-76 prevents automated run -->
-          <!-- <plugin> -->
-          <!-- <groupId>org.codehaus.mojo</groupId> -->
-          <!-- <artifactId>license-maven-plugin</artifactId> -->
-          <!-- <inherited>false</inherited> -->
-          <!-- <executions> -->
-          <!-- <execution> -->
-          <!-- <id>aggregate-add-third-party</id> -->
-          <!-- <goals> -->
-          <!-- <goal>aggregate-add-third-party</goal> -->
-          <!-- </goals> -->
-          <!-- <phase>verify</phase> -->
-          <!-- </execution> -->
-          <!-- </executions> -->
-          <!-- </plugin> -->
-        </plugins>
-      </build>
-      <repositories>
-        <repository>
-          <id>nightly-staging</id>
-          <url>http://mavenin.nuxeo.com/nexus/content/repositories/nightly-staging</url>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </repository>
-      </repositories>
-      <distributionManagement>
-        <repository>
-          <id>nightly-staging</id>
-          <url>http://mavenin.nuxeo.com/nexus/content/repositories/nightly-staging</url>
-          <uniqueVersion>true</uniqueVersion>
-        </repository>
-      </distributionManagement>
-    </profile>
-    <profile>
       <id>javadoc</id>
       <build>
         <plugins>
@@ -6430,24 +6377,10 @@
       <id>qa</id>
       <repositories>
         <repository>
-          <id>internal-releases</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-releases
-          </url>
+          <id>maven-internal</id>
+          <url>https://packages.nuxeo.com/repository/maven-internal/</url>
           <releases>
             <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </repository>
-        <repository>
-          <id>internal-snapshots</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-snapshots
-          </url>
-          <releases>
-            <enabled>false</enabled>
           </releases>
           <snapshots>
             <enabled>true</enabled>
@@ -6457,26 +6390,10 @@
       </repositories>
       <pluginRepositories>
         <pluginRepository>
-          <id>internal-releases</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-releases
-          </url>
-          <name>Nuxeo virtual release repository</name>
+          <id>maven-internal</id>
+          <url>https://packages.nuxeo.com/repository/maven-internal/</url>
           <releases>
             <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-          <id>internal-snapshots</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-snapshots
-          </url>
-          <name>Nuxeo virtual snapshot repository</name>
-          <releases>
-            <enabled>false</enabled>
           </releases>
           <snapshots>
             <updatePolicy>always</updatePolicy>
@@ -6485,13 +6402,11 @@
         </pluginRepository>
       </pluginRepositories>
       <distributionManagement>
-        <snapshotRepository>
-          <id>daily-snapshots</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/repositories/daily-snapshots
-          </url>
+        <repository>
+          <id>maven-internal-staging</id>
+          <url>https://packages.nuxeo.com/repository/maven-internal-staging/</url>
           <uniqueVersion>true</uniqueVersion>
-        </snapshotRepository>
+        </repository>
       </distributionManagement>
     </profile>
 
@@ -6499,24 +6414,10 @@
       <id>qapriv</id>
       <repositories>
         <repository>
-          <id>internal-releases</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-releases
-          </url>
+          <id>maven-internal</id>
+          <url>https://packages.nuxeo.com/repository/maven-internal/</url>
           <releases>
             <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </repository>
-        <repository>
-          <id>internal-snapshots</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-snapshots
-          </url>
-          <releases>
-            <enabled>false</enabled>
           </releases>
           <snapshots>
             <enabled>true</enabled>
@@ -6524,24 +6425,10 @@
           </snapshots>
         </repository>
         <repository>
-          <id>releases</id>
-          <url>
-            https://mavenpriv.nuxeo.com/nexus/content/repositories/releases
-          </url>
+          <id>maven-private</id>
+          <url>https://packages.nuxeo.com/repository/maven-private/</url>
           <releases>
             <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </repository>
-        <repository>
-          <id>snapshots</id>
-          <url>
-            https://mavenpriv.nuxeo.com/nexus/content/repositories/snapshots
-          </url>
-          <releases>
-            <enabled>false</enabled>
           </releases>
           <snapshots>
             <enabled>true</enabled>
@@ -6551,45 +6438,25 @@
       </repositories>
       <pluginRepositories>
         <pluginRepository>
-          <id>internal-releases</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-releases
-          </url>
-          <name>Nuxeo virtual release repository</name>
+          <id>maven-internal</id>
+          <url>https://packages.nuxeo.com/repository/maven-internal/</url>
           <releases>
             <enabled>true</enabled>
           </releases>
           <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-          <id>internal-snapshots</id>
-          <url>
-            http://mavenin.nuxeo.com/nexus/content/groups/internal-snapshots
-          </url>
-          <name>Nuxeo virtual snapshot repository</name>
-          <releases>
-            <enabled>false</enabled>
-          </releases>
-          <snapshots>
+            <enabled>true</enabled>
             <updatePolicy>always</updatePolicy>
-            <enabled>true</enabled>
           </snapshots>
         </pluginRepository>
       </pluginRepositories>
       <distributionManagement>
         <repository>
-          <id>releases</id>
-          <url>
-            https://mavenpriv.nuxeo.com/nexus/content/repositories/releases
-          </url>
+          <id>maven-private-releases</id>
+          <url>https://packages.nuxeo.com/repository/maven-private-releases/</url>
         </repository>
         <snapshotRepository>
-          <id>snapshots</id>
-          <url>
-            https://mavenpriv.nuxeo.com/nexus/content/repositories/snapshots
-          </url>
+          <id>maven-private-snapshots</id>
+          <url>https://packages.nuxeo.com/repository/maven-private-snapshots/</url>
           <uniqueVersion>true</uniqueVersion>
         </snapshotRepository>
       </distributionManagement>
@@ -6928,20 +6795,10 @@
 
   <repositories>
     <repository>
-      <id>public</id>
-      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
+      <id>maven-public</id>
+      <url>https://packages.nuxeo.com/repository/maven-public/</url>
       <releases>
         <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>public-snapshot</id>
-      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
-      <releases>
-        <enabled>false</enabled>
       </releases>
       <snapshots>
         <updatePolicy>always</updatePolicy>
@@ -6952,22 +6809,10 @@
 
   <pluginRepositories>
     <pluginRepository>
-      <id>public</id>
-      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
-      <name>Nuxeo virtual release repository</name>
+      <id>maven-public</id>
+      <url>https://packages.nuxeo.com/repository/maven-public/</url>
       <releases>
         <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>public-snapshot</id>
-      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
-      <name>Nuxeo virtual snapshot repository</name>
-      <releases>
-        <enabled>false</enabled>
       </releases>
       <snapshots>
         <updatePolicy>always</updatePolicy>
@@ -6977,21 +6822,13 @@
   </pluginRepositories>
 
   <distributionManagement>
-    <site>
-      <id>maven-website</id>
-      <url>scpexe://gironde.nuxeo.com/home/mavenweb/site/</url>
-    </site>
     <repository>
-      <id>public-releases</id>
-      <url>
-        http://mavenin.nuxeo.com/nexus/content/repositories/public-releases
-      </url>
+      <id>maven-public-releases</id>
+      <url>https://packages.nuxeo.com/repository/maven-public-releases/</url>
     </repository>
     <snapshotRepository>
-      <id>public-snapshots</id>
-      <url>
-        http://mavenin.nuxeo.com/nexus/content/repositories/public-snapshots
-      </url>
+      <id>maven-public-snapshots</id>
+      <url>https://packages.nuxeo.com/repository/maven-public-snapshots/</url>
       <uniqueVersion>true</uniqueVersion>
     </snapshotRepository>
   </distributionManagement>
